nieuwe look voor de TVO studenten FAQ

--- a/A-Z/Exams/TestVision/22-23/5_FAQ-students_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/5_FAQ-students_22-23.html
@@ -1,103 +1,99 @@
-<!-- Back to top -->
-<p><a id="topmenu"></a></p>
-
-<!-- Banner -->
 <p><img style="width: 100%;" src="https://canvas.uva.nl/courses/8175/files/5129479/preview" alt="2021:22bannertvo-1.jpg" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/5129479" data-api-returntype="File" /></p>
-
-<div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #063852; padding: 30px; padding-top: 35px; padding-bottom: 35px; height: auto; background-color: #fcfcfc;">
-    <h3><p style="text-align: center;"><span style="font-size: 14pt;"><b>Frequently asked questions</b></span></p></h3>
-    <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ1">I have a disability and need extra time for the exam. What should I do?</a></span></p>
-    <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ2">What do I need to bring to the exam?</a></span></p>
-    <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ3">Can I bring a bag? Are there lockers or something to leave things?</a></span></p>
-    <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ4">What happens if I’m late? Can I nevertheless start the exam?</a></span></p>
-    <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ5">What if I do not have extra time during the exam even though I am entitled to it?</a></span></p>
-    <br />
-    <h3><p style="text-align: center;"><span style="font-size: 14pt;"><strong>How to login</strong></span></p></h3>
-    <table style="border-collapse: collapse; width: 55.5269%; height: auto; border-style: hidden; margin-left: auto; margin-right: auto;" border="1">
-        <tbody>
-            <tr style="height: 29px; border-style: hidden;">
-                <td style="width: 49.9504%; border-style: hidden; text-align: center; height: 29px;"><a target="_blank" rel="noopener noreferrer" href="https://canvas.uva.nl/courses/28129/files/7187213?wrap=1">Exam</a></td>
-                <td style="width: 49.9504%; border-style: hidden; text-align: center; height: 29px;"><a target="_blank" rel="noopener noreferrer" href="https://canvas.uva.nl/courses/28129/files/7187212?wrap=1">Inspection</a></td>
-            </tr>
-            <tr style="height: 190px; border-style: hidden;">
-                <td style="width: 49.9504%; text-align: center; height: 210px; border-style: hidden;"><a id="7187213" class="instructure_file_link instructure_scribd_file inline_disabled" href="https://canvas.uva.nl/courses/28129/files/7187213?wrap=1" target="_blank" rel="noopener noreferrer" data-canvas-previewable="true"><img src="https://canvas.uva.nl/courses/28129/files/7187256/preview" alt="6-1.png" width="180" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/28129/files/7187154" data-api-returntype="File" /></a></td>
-                <td style="width: 49.9504%; text-align: center; height: 210px; border-style: hidden;"><a id="7187212" class="instructure_file_link instructure_scribd_file inline_disabled" href="https://canvas.uva.nl/courses/28129/files/7187212?wrap=1" target="_blank" rel="noopener noreferrer" data-canvas-previewable="true"><img src="https://canvas.uva.nl/courses/28129/files/7187266/preview" alt="7-3.png" width="180" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/28129/files/7187153" data-api-returntype="File" /></a></td>
-            </tr>
-        </tbody>
-    </table>
-  </div>
-
-<!-- FAQ1 -->
-<p><a id="FAQ1"></a></p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
-<h4 style="text-align: center; margin-bottom: 35px;"><strong>I have a disability and need extra time for the exam. What should I do?</strong></h4>
-<p style="text-align: center;">
-    Please visit <a href="https://student.uva.nl/onderwerpen/hoe-vraag-je-een-tentamen-voorziening-aan">this page</a> to read the most current information about extra time.
-</p>
-<p style="text-align: center;">
-      Beware that you need to start asking for extra time at least a month prior to the exam because it may take a little while to be processed.
-</p>
-<p>&nbsp;</p>
-<h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a></h5>
-</div>
-
-<!-- FAQ2 -->
-<p><a id="FAQ2"></a></p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
-    <h4 style="text-align: center; margin-bottom: 35px;"><strong>What do I need to bring to the exam?</strong></h4>
-    <p style="text-align: center;">
-        You need to bring your UvA Pass and identification.
-    </p>
-    <p style="text-align: center;">
-        You also need to enter your UvAnetID and password in TestVision to login.
-    </p>
-  <p>&nbsp;</p>
-  <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a></h5>
-</div>
-
-<!-- FAQ3 -->
-<p><a id="FAQ3"></a></p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
-  <h4 style="text-align: center; margin-bottom: 35px;"><strong>Can I bring a bag? Are there lockers or something to leave things?</strong></h4>
-  <p style="text-align: center;">Students can bring bags and just place them under their table.</p>
-  <p>&nbsp;</p>
-  <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a></h5>
-</div>
-
-<!-- FAQ4 -->
-<p><a id="FAQ4"></a></p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
-    <h4 style="text-align: center; margin-bottom: 35px;"><strong>What happens if I’m late? Can I nevertheless start the exam?</strong></h4>
-    <p style="text-align: center;">
-        If a student is 30 minutes late (or later), they cannot enter the exam room.
-    </p>
-    <p style="text-align: center;">
-        Also; students can only leave the exam room after 30 minutes, not earlier.
-    </p>
-  <p>&nbsp;</p>
-  <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a></h5>
-</div>
-
-<!-- FAQ5 -->
-<p><a id="FAQ5"></a></p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
-  <h4 style="text-align: center; margin-bottom: 35px;"><strong>What if I do not have extra time during the exam even though I am entitled to it?</strong></h4>
-  <p style="text-align: center;">Please raise your hand as soon as possible to inform the teachers or staff about it. You are too late to get extra time if you have already closed the exam (at the end) so double check the timer that is present in your screen at the very start of the exam (or during). You will be given a temporary non-personal account to take the exam with extra time. Please note that it will be checked afterwards whether you were indeed entitled to extra time. There are consequences if it turns out not to be true.</p>
-  <p>&nbsp;</p>
-  <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a></h5>
-</div>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
+<p><a id="topmenu"></a></p>
+<blockquote style="padding-top: 10px; padding-bottom: 10px;">
+    <p><em>The most frequently asked questions by students with regards to the TestVision digital examination process are listed below. It's recommended to take a glance at all questions to familiarize yourself with the examination process.</em></p>
+</blockquote>
+<h3><br /><i class="icon-unlock"></i><span style="font-size: 18pt; color: #34495e;"><strong> Logging in</strong></span></h3>
+<h3><span class="element_toggler " aria-controls="FAQ1" aria-label="Toggler toggle list visibility" aria-expanded="false"> <i class="icon-mini-arrow-right"></i><span style="font-size: 13pt;"><a>How do I log in to TestVision for an exam?</a></span></span></h3>
+<ul id="FAQ1" style="list-style: none; display: none;">
+    <li>
+        <div class="content-box">
+            <div style="background-color: #ffffff; padding-left: 30px; border-left: 5px solid #e1e9f4;">
+                <p>Please refer to <a href="https://canvas.uva.nl/courses/28129/files/7187213?wrap=1" target="_blank" rel="noopener" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/28129/files/7187213" data-api-returntype="File">this instruction</a>. Please note that you need your UvAnetID and password to log in, so make sure to remember these ahead of the exam. Forgot your UvAnetID or password? <a href="https://student.uva.nl/onderwerpen/inloggen-met-je-uvanetid" target="_blank" rel="noopener">Click here</a>.</p>
+            </div>
+        </div>
+    </li>
+</ul>
+<h3><span class="element_toggler " aria-controls="FAQ2" aria-label="Toggler toggle list visibility" aria-expanded="false"> <i class="icon-mini-arrow-right"></i><span style="font-size: 13pt;"><a>How do I log in to TestVision for an inspection?</a></span> </span></h3>
+<ul id="FAQ2" style="list-style: none; display: none;">
+    <li>
+        <div class="content-box">
+            <div style="background-color: #ffffff; padding-left: 30px; border-left: 5px solid #e1e9f4;">
+                <p>Please refer to <a href="https://canvas.uva.nl/courses/28129/files/7187212?wrap=1" target="_blank" rel="noopener" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/28129/files/7187212" data-api-returntype="File">this instruction</a>. Please note that you need your UvAnetID and password to log in, so make sure to remember these ahead of the exam. Forgot your UvAnetID or password? <a href="https://student.uva.nl/onderwerpen/inloggen-met-je-uvanetid" target="_blank" rel="noopener">Click here</a>.</p>
+            </div>
+        </div>
+    </li>
+</ul>
+<h3><br /><i class="icon-timer"></i><span style="font-size: 18pt; color: #34495e;"><strong> Arrival and departure times</strong></span></h3>
+<h3><span class="element_toggler " aria-controls="FAQ3" aria-label="Toggler toggle list visibility" aria-expanded="false"> <i class="icon-mini-arrow-right"></i><span style="font-size: 13pt;"><a>What happens if I'm later? Can I nevertheless start the exam?</a></span> </span></h3>
+<ul id="FAQ3" style="list-style: none; display: none;">
+    <li>
+        <div class="content-box">
+            <div style="background-color: #ffffff; padding-left: 30px; border-left: 5px solid #e1e9f4;">
+                <p>If you are less than 30 minutes late, you can still start the exam. If you arrive late by 30 minutes or more, you are no longer allowed to enter the examination room and have automatically failed the exam.</p>
+            </div>
+        </div>
+    </li>
+</ul>
+<h3><span class="element_toggler " aria-controls="FAQ4" aria-label="Toggler toggle list visibility" aria-expanded="false"> <i class="icon-mini-arrow-right"></i><span style="font-size: 13pt;"><a>When am I allowed to leave the examination room?</a></span> </span></h3>
+<ul id="FAQ4" style="list-style: none; display: none;">
+    <li>
+        <div class="content-box">
+            <div style="background-color: #ffffff; padding-left: 30px; border-left: 5px solid #e1e9f4;">
+                <p>You're only allowed to leave the room after 30 minutes, even if you finish earlier.</p>
+            </div>
+        </div>
+    </li>
+</ul>
+<h3><br /><i class="icon-materials-required"></i><span style="font-size: 18pt; color: #34495e;"><strong> Materials</strong></span></h3>
+<h3><span class="element_toggler " aria-controls="FAQ5" aria-label="Toggler toggle list visibility" aria-expanded="false"> <i class="icon-mini-arrow-right"></i><span style="font-size: 13pt;"><a>What do I need to bring to the exam?</a></span> </span></h3>
+<ul id="FAQ5" style="list-style: none; display: none;">
+    <li>
+        <div class="content-box">
+            <div style="background-color: #ffffff; padding-left: 30px; border-left: 5px solid #e1e9f4;">
+                <p>To take part in the exam, you'll need to bring the following:</p>
+                <ul>
+                    <li>Your UvA student pass.</li>
+                    <li>A valid form of identification (e.g. your ID, passport or driving license).</li>
+                    <li>Make sure you know your UvAnetID and password by heart to log in on TestVision. Forgot your UvAnetID or password? <a href="https://student.uva.nl/onderwerpen/inloggen-met-je-uvanetid" target="_blank" rel="noopener">Click here</a>.</li>
+                </ul>
+                <p>If the teacher decides to provide scrap paper, you will need to bring your own pen(s). Bags will have to be put in lockers in bigger exam locations.</p>
+            </div>
+        </div>
+    </li>
+</ul>
+<h3><span class="element_toggler " aria-controls="FAQ6" aria-label="Toggler toggle list visibility" aria-expanded="false"> <i class="icon-mini-arrow-right"></i><span style="font-size: 13pt;"><a>Can I bring my bag?</a></span> </span></h3>
+<ul id="FAQ6" style="list-style: none; display: none;">
+    <li>
+        <div class="content-box">
+            <div style="background-color: #ffffff; padding-left: 30px; border-left: 5px solid #e1e9f4;">
+                <p>Yes. You are required to store your bag inside a locker in large examination locations. In smaller examination locations, you're allowed to take your bag inside to your desk unless stated otherwise by the teacher and/or staff.</p>
+            </div>
+        </div>
+    </li>
+</ul>
+<h3><br /><i class="icon-clock"></i><span style="font-size: 18pt; color: #34495e;"><strong> Extra time</strong></span></h3>
+<h3><span class="element_toggler " aria-controls="FAQ7" aria-label="Toggler toggle list visibility" aria-expanded="false"> <i class="icon-mini-arrow-right"></i><span style="font-size: 13pt;"><a>I have a disability and need extra time for the exam. What should I do?</a></span> </span></h3>
+<ul id="FAQ7" style="list-style: none; display: none;">
+    <li>
+        <div class="content-box">
+            <div style="background-color: #ffffff; padding-left: 30px; border-left: 5px solid #e1e9f4;">
+                <p>You must request extra time at least 6 weeks prior to the exam. Once your request has been approved, you will automatically receive extra time for the upcoming TestVision exams for as long as your grant lasts. Students can request extra time (and other special facilities) <a href="https://student.uva.nl/en/topics/request-a-special-facility-e-g-for-examinations" target="_blank" rel="noopener">via this link</a>.</p>
+            </div>
+        </div>
+    </li>
+</ul>
+<h3><span class="element_toggler " aria-controls="FAQ10" aria-label="Toggler toggle list visibility" aria-expanded="false"> <i class="icon-mini-arrow-right"></i><span style="font-size: 13pt;"><a>What if I do not have extra time during the exam even though I am entitled to it?</a></span> </span></h3>
+<ul id="FAQ10" style="list-style: none; display: none;">
+    <li>
+        <div class="content-box">
+            <div style="background-color: #ffffff; padding-left: 30px; border-left: 5px solid #e1e9f4;">
+                <p>You can see the (remaining) amount of time in TestVision at all times: in the instruction, on the timer below every question and in the on-screen notification 5 minutes before the exam ends. If you believe you have not been granted the appropriate amount of time, please raise your hand as soon as possible to inform the teacher or staff. If approved by the teacher, the staff will provide you extra time on the spot. Whether the extra time was granted rightfully will be evaluated afterwards. If you have already handed in the exam or time has run out, you will no longer be granted extra time, so make sure to double check the timer in TestVision at the very start of (or during) the exam.</p>
+                <p>For future exams, make sure to apply for extra time as soon as possible <a href="https://student.uva.nl/en/topics/request-a-special-facility-e-g-for-examinations" target="_blank" rel="noopener">via this link</a>.</p>
+            </div>
+        </div>
+    </li>
+</ul>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
