a-z weer geupdatet met live examples voor canvas rubrics en quizzes

--- a/A-Z/Homepage/AZ-Homepage_22-23.html
+++ b/A-Z/Homepage/AZ-Homepage_22-23.html
@@ -546,6 +546,9 @@
                                     <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/adding-a-rubric-to-an-assignment-or-quiz" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/adding-a-rubric-to-an-assignment-or-quiz" data-api-returntype="Page">
                                         <span>View more</span>
                                     </a>
+                                    <a class="btn Button" style="margin: 5px; background-color: #008ee6; color: #ffffff;" href="https://canvas.uva.nl/courses/8175/assignments/436428" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/assignments/436428" data-api-returntype="Assignment">
+                                        <i class="icon-student-view"></i> Live example
+                                    </a>
                                 </td>
                             </tr>
                         </tbody>
@@ -1100,6 +1103,9 @@
                                     <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/manual-canvas-assessments" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/manual-canvas-assessments" data-api-returntype="Page">
                                         <span>View more</span>
                                     </a>
+                                    <a class="btn Button" style="margin: 5px; background-color: #008ee6; color: #ffffff;" href="https://canvas.uva.nl/courses/8175/quizzes/89701" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/quizzes/89701" data-api-returntype="Quiz">
+                                        <i class="icon-student-view"></i> Live example
+                                    </a>
                                 </td>
                             </tr>
                         </tbody>
@@ -1373,6 +1379,9 @@
                                 <td style="width: 22.3964%;">
                                     <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/adding-a-rubric-to-an-assignment-or-quiz" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/adding-a-rubric-to-an-assignment-or-quiz" data-api-returntype="Page">
                                         <span>View more</span>
+                                    </a>
+                                    <a class="btn Button" style="margin: 5px; background-color: #008ee6; color: #ffffff;" href="https://canvas.uva.nl/courses/8175/assignments/436428" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/assignments/436428" data-api-returntype="Assignment">
+                                        <i class="icon-student-view"></i> Live example
                                     </a>
                                 </td>
                             </tr>
