live example discussions

--- a/A-Z/Homepage/AZ-Homepage_22-23.html
+++ b/A-Z/Homepage/AZ-Homepage_22-23.html
@@ -918,6 +918,9 @@
                                     <a class="btn Button" style="margin: 5px;" href="https://community.canvaslms.com/t5/Instructor-Guide/tkb-p/Instructor#Discussions">
                                         <span>View more</span>
                                     </a>
+                                    <a class="btn Button" style="margin: 5px; background-color: #008ee6; color: #ffffff;" href="https://canvas.uva.nl/courses/8175/discussion_topics/718127">
+                                        <i class="icon-student-view"></i> Live example
+                                    </a>
                                 </td>
                             </tr>
                         </tbody>
