--- a/CCSi/Homepag_CONNECTIONS.html
+++ b/CCSi/Homepag_CONNECTIONS.html
@@ -21,15 +21,15 @@
     </ul>
 
     <div id="About" style="background-color: #ffffff; height: auto; padding-left: 30px; padding-top: 30px; padding-bottom: 50px;">
-        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #124240; title="">
+        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #124240;" href="https://canvas.uva.nl/courses/39886/modules/344958?wrap=1" target="_blank" >
             <h5><span style="font-size: 14pt; color: #1e1e1e;">Course manual</span></h5>
-            <span style="font-size: 10pt; color: #124240;"><em>More information will follow soon</em></span>
+            <span style="font-size: 10pt; color: #124240;"><em>Course Manual Semester 3 Connections 2023-2024</em></span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #124240; title="" href="https://canvas.uva.nl/courses/39886/assignments">
+        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #124240;" href="https://canvas.uva.nl/courses/39886/assignments">
             <h5><span style="font-size: 14pt; color: #1e1e1e;">Assignment deadlines</span></h5>
             <span style="font-size: 10pt; color: #124240;"><em>Check out this page for an overview of all deadlines</em></span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #124240; title="" href="https://rooster.uva.nl/schedule">
+        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #124240; " href="https://rooster.uva.nl/schedule">
             <h5><span style="font-size: 14pt; color: #1e1e1e;">Weekly schedule</span></h5>
             <span style="font-size: 10pt; color: #124240;"><em>You can view your weekly schedule via rooster.uva.nl. if you have downloaded or printed this information, please be aware that times, dates and locations may be subject to change and you should regularly check your online timetable.</em></span>
         </a>
@@ -111,21 +111,21 @@
             <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 16:  December 18-22</span>
         </a>
         <!-- 17 -->
-        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #124240; title="Week 17: January 8-12 FINISHING PROJECT/Writing Up Project NOT ON SITE="/courses/39886/modules/340616?wrap=1">
+        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #124240; title="Week 17: January 8-12 FINISHING PROJECT/Writing Up Project NOT ON SITE" href="/courses/39886/modules/340616?wrap=1">
             <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 17: January 8-12 FINISHING PROJECT/Writing Up Project NOT ON SITE</span>
         </a>
-        <!-- 18
-        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #124240; title="Week 18: January 15-19" href="">
+        <!-- 18 -->
+        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #124240; title="Week 18: January 15-19" href="/courses/39886/modules/340617?wrap=1">
             <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 18:  January 15-19</span>
-        </a>-->
+        </a>
         <!-- 19
         <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #124240; title="WWeek 19: January 22-26" href="">
             <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 19:  January 22-26</span>
         </a>-->
-        <!-- 20 -->
+        <!-- 20 
         <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #124240; title="Week 20: January 29 - February 2" href="/courses/39886/modules/340617?wrap=1">
             <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 20:  January 29 - February 2</span>
-        </a>
+        </a>-->
        
     </div>
 
