Canvas workshop naslagwerk

--- a/Canvas Workshop/0_Home.html
+++ b/Canvas Workshop/0_Home.html
@@ -19,9 +19,9 @@
         <table style="width:100%; border-spacing: 50px;" >
             <tr>
                 <!-- Opdrachten -->
-                <td style="width:65%;vertical-align: top; padding-right:15px; padding-left:5px" rowspan="1">
+                <td style="width:50%;vertical-align: top; padding-right:25px; padding-left:5px" rowspan="1">
                     <a id="" class="Button Button--large" style="margin-bottom:10px;margin-right:16px;border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: -1px; padding-bottom: 20px; border-color: #124240;" href="/courses/42097/pages/create-test-course">
-                        <span style="font-size: 12pt; color: #1e1e1e; text-align: center;">1)&nbsp;&nbsp;&nbsp;Maak je eigen testcursus</p>
+                        <span style="font-size: 12pt; color: #1e1e1e; text-align: center;">1)&nbsp;&nbsp;&nbsp;Maak een testcursus</p>
                     </a>
                     <a id="" class="Button Button--large" style="margin-bottom:10px;margin-right:10px;border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 1px; padding-bottom: 20px; border-color: #124240;" href="/courses/42097/pages/create-homepage">
                         <span style="font-size: 12pt; color: #1e1e1e; text-align: center;">2)&nbsp;&nbsp;&nbsp;Maak een homepagina aan</span>
@@ -44,7 +44,7 @@
                 </td>
 
                 <!-- Contactgegevens -->
-                <td style="width:35%;vertical-align: top; background-color: #286E80; border-radius: 5px; padding:15px; color:#ffffff">
+                <td style="width:50%;vertical-align: top; background-color: #286E80; border-radius: 5px; padding:15px; color:#ffffff">
                     <h5 style="text-align: left;"><b>Contact</b></h5>
                     <p> 
                         <i class="icon-email"></i>&nbsp;&nbsp;<a style="text-decoration: none; color:#ffffff" href="mailto:icto-csw@uva.nl">icto-csw@uva.nl</a><br>
@@ -81,32 +81,32 @@
         <table style="width:100%; border-spacing: 50px;" >
             <tr>
                 <!-- Opdrachten -->
-                <td style="width:65%;vertical-align: top; padding-right:15px; padding-left:5px" rowspan="1">
-                    <a id="" class="Button Button--large" style="margin-bottom:10px;margin-right:16px;border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: -1px; padding-bottom: 20px; border-color: #124240;" href="/courses/42097/pages/create-test-course" target="_blank">
-                        <span style="font-size: 12pt; color: #1e1e1e; text-align: center;">1)&nbsp;&nbsp;&nbsp;Create your own sandbox course</p>
+                <td style="width:50%;vertical-align: top; padding-right:25px; padding-left:5px" rowspan="1">
+                    <a id="" class="Button Button--large" style="margin-bottom:10px;margin-right:16px;border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: -1px; padding-bottom: 20px; border-color: #124240;" href="/courses/42097/pages/create-test-course">
+                        <span style="font-size: 12pt; color: #1e1e1e; text-align: center;">1)&nbsp;&nbsp;&nbsp;Create a sandbox course</p>
                     </a>
-                    <a id="" class="Button Button--large" style="margin-bottom:10px;margin-right:10px;border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 1px; padding-bottom: 20px; border-color: #124240;" href="/courses/42097/pages/create-homepage"target="_blank">
+                    <a id="" class="Button Button--large" style="margin-bottom:10px;margin-right:10px;border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 1px; padding-bottom: 20px; border-color: #124240;" href="/courses/42097/pages/create-homepage">
                         <span style="font-size: 12pt; color: #1e1e1e; text-align: center;">2)&nbsp;&nbsp;&nbsp;Create a homepage</span>
                     </a>
-                    <a id="" class="Button Button--large" style="margin-bottom:10px;margin-right:10px;border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 1px; padding-bottom: 20px; border-color: #124240;" href="/courses/42097/pages/create-module"target="_blank">
+                    <a id="" class="Button Button--large" style="margin-bottom:10px;margin-right:10px;border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 1px; padding-bottom: 20px; border-color: #124240;" href="/courses/42097/pages/create-module">
                         <span style="font-size: 12pt; color: #1e1e1e; text-align: center;">3)&nbsp;&nbsp;&nbsp;Create a module</span>
                     </a>
-                    <a id="" class="Button Button--large" style="margin-bottom:10px;margin-right:10px;border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 1px; padding-bottom: 20px; border-color: #124240;" href="/courses/42097/pages/use-student-view"target="_blank">
+                    <a id="" class="Button Button--large" style="margin-bottom:10px;margin-right:10px;border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 1px; padding-bottom: 20px; border-color: #124240;" href="/courses/42097/pages/use-student-view">
                         <span style="font-size: 12pt; color: #1e1e1e; text-align: center;">4)&nbsp;&nbsp;&nbsp;Use the student view</span>
                     </a>
-                    <a id="" class="Button Button--large" style="margin-bottom:10px;margin-right:10px;border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 1px; padding-bottom: 20px; border-color: #124240;" href="/courses/42097/pages/create-assignment"target="_blank">
+                    <a id="" class="Button Button--large" style="margin-bottom:10px;margin-right:10px;border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 1px; padding-bottom: 20px; border-color: #124240;" href="/courses/42097/pages/create-assignment">
                         <span style="font-size: 12pt; color: #1e1e1e; text-align: center;">5)&nbsp;&nbsp;&nbsp;Create an assignment</span>
                     </a>
-                    <a id="" class="Button Button--large" style="margin-bottom:10px;margin-right:10px;border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 1px; padding-bottom: 20px; border-color: #124240; " href="/courses/42097/pages/publish-grades"target="_blank">
-                        <span style="font-size: 12pt; color: #1e1e1e; text-align: center;">6)&nbsp;&nbsp;&nbsp;Publish the grades to</span>
+                    <a id="" class="Button Button--large" style="margin-bottom:10px;margin-right:10px;border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 1px; padding-bottom: 20px; border-color: #124240; " href="/courses/42097/pages/publish-grades">
+                        <span style="font-size: 12pt; color: #1e1e1e; text-align: center;">6)&nbsp;&nbsp;&nbsp;Publish the grades</span>
                     </a>
-                    <a id="" class="Button Button--large" style="margin-right:10px;border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 1px; padding-bottom: 20px; border-color: #124240;" href="/courses/42097/pages/create-announcement"target="_blank">
+                    <a id="" class="Button Button--large" style="margin-right:10px;border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 1px; padding-bottom: 20px; border-color: #124240;" href="/courses/42097/pages/create-announcement">
                         <span style="font-size: 12pt; color: #1e1e1e; text-align: center;">7)&nbsp;&nbsp;&nbsp;Create an announcement</span>
                     </a>
                 </td>
 
                 <!-- Contactgegevens -->
-                <td style="width:35%;vertical-align: top; background-color: #286E80; border-radius: 5px; padding:15px; color:#ffffff">
+                <td style="width:50%;vertical-align: top; background-color: #286E80; border-radius: 5px; padding:15px; color:#ffffff">
                     <h5 style="text-align: left;"><b>Contact</b></h5>
                     <p> 
                         <i class="icon-email"></i>&nbsp;&nbsp;<a style="text-decoration: none; color:#ffffff" href="mailto:icto-csw@uva.nl">icto-csw@uva.nl</a><br>
@@ -117,7 +117,7 @@
                 <hr>
 
                 <!-- Handige links -->
-                    <h5 style="text-align: left;"><b>Handige links</b></h5>
+                    <h5 style="text-align: left;"><b>Useful links</b></h5>
                     <a class="btn Button" style="margin: 1px; padding:5px; width:92%; text-align:left" href="/enroll/N3HMY8" data-api-returntype="Page" data-api-endpoint="/enroll/N3HMY8" target="_blank"><i class="icon-canvas-logo"></i>&nbsp;&nbsp;Canvas ICTO Social Sciences</a>
                     <a class="btn Button" style="margin: 1px; padding:5px; width:92%; text-align:left" href="/courses/169" data-api-returntype="Page" data-api-endpoint="/courses/169" target="_blank"><i class="icon-canvas-logo"></i>&nbsp;&nbsp;Canvas for UvA instructors</a>
                     <!-- <a class="btn Button" style="margin: 1px; padding:5px; width:92%; text-align:left" href="" data-api-returntype="Page" data-api-endpoint="" target="_blank">Voorbeeld</a> -->
