update height workshop

--- a/Canvas Workshop/2_Create_homepage.html
+++ b/Canvas Workshop/2_Create_homepage.html
@@ -61,7 +61,7 @@
         <!-- Video -->
         <tr>
             <td style="width:65%;vertical-align: top; padding:10px" rowspan="1">
-                <iframe style="width: 100%; height: 60vh;" title="Create homepage" src="https://canvas.uva.nl/courses/42097/external_tools/retrieve?display=borderless&amp;resource_link_lookup_uuid=83d1b4d4-9c98-4f5d-b875-b6002dd70d73" allowfullscreen="allowfullscreen" allow="geolocation *; microphone *; camera *; midi *; encrypted-media *; autoplay *; clipboard-write *; display-capture *"></iframe>
+                <iframe style="width: 100%; min-height:350px " title="Create homepage" src="https://canvas.uva.nl/courses/42097/external_tools/retrieve?display=borderless&amp;resource_link_lookup_uuid=83d1b4d4-9c98-4f5d-b875-b6002dd70d73" allowfullscreen="allowfullscreen" allow="geolocation *; microphone *; camera *; midi *; encrypted-media *; autoplay *; clipboard-write *; display-capture *"></iframe>
             </td>
         </tr>
 
@@ -145,7 +145,7 @@
             <!-- Video -->
             <tr>
                 <td style="width:65%;vertical-align: top; padding:10px" rowspan="1">
-                    <iframe style="width: 100%; height: 60vh;" title="Create homepage" src="https://canvas.uva.nl/courses/42097/external_tools/retrieve?display=borderless&amp;resource_link_lookup_uuid=83d1b4d4-9c98-4f5d-b875-b6002dd70d73" allowfullscreen="allowfullscreen" allow="geolocation *; microphone *; camera *; midi *; encrypted-media *; autoplay *; clipboard-write *; display-capture *"></iframe>
+                    <iframe style="width: 100%; min-height:350px " title="Create homepage" src="https://canvas.uva.nl/courses/42097/external_tools/retrieve?display=borderless&amp;resource_link_lookup_uuid=83d1b4d4-9c98-4f5d-b875-b6002dd70d73" allowfullscreen="allowfullscreen" allow="geolocation *; microphone *; camera *; midi *; encrypted-media *; autoplay *; clipboard-write *; display-capture *"></iframe>
                 </td>
             </tr>
     
