--- a/Canvas Workshop/3_Create_module.html
+++ b/Canvas Workshop/3_Create_module.html
@@ -59,7 +59,7 @@
         <!-- Video -->
         <tr>
             <td style="width:65%;vertical-align: top; padding:10px" rowspan="1">
-                <iframe style="width: 100%; height: 60vh;" title="" src="https://canvas.uva.nl/courses/42097/external_tools/retrieve?display=borderless&amp;resource_link_lookup_uuid=cfb5c07f-55da-4dda-8aa0-5c73cf6588e5" allowfullscreen="allowfullscreen" allow="geolocation *; microphone *; camera *; midi *; encrypted-media *; autoplay *; clipboard-write *; display-capture *"></iframe>
+                <iframe style="width: 100%; min-height: 350px;" title="" src="https://canvas.uva.nl/courses/42097/external_tools/retrieve?display=borderless&amp;resource_link_lookup_uuid=cfb5c07f-55da-4dda-8aa0-5c73cf6588e5" allowfullscreen="allowfullscreen" allow="geolocation *; microphone *; camera *; midi *; encrypted-media *; autoplay *; clipboard-write *; display-capture *"></iframe>
             </td>
         </tr>
         
@@ -141,7 +141,7 @@
             <!-- Video -->
             <tr>
                 <td style="width:65%;vertical-align: top; padding:10px" rowspan="1">
-                    <iframe style="width: 100%; height: 60vh;" title="" src="https://canvas.uva.nl/courses/42097/external_tools/retrieve?display=borderless&amp;resource_link_lookup_uuid=cfb5c07f-55da-4dda-8aa0-5c73cf6588e5" allowfullscreen="allowfullscreen" allow="geolocation *; microphone *; camera *; midi *; encrypted-media *; autoplay *; clipboard-write *; display-capture *"></iframe>
+                    <iframe style="width: 100%; min-height: 350px;" title="" src="https://canvas.uva.nl/courses/42097/external_tools/retrieve?display=borderless&amp;resource_link_lookup_uuid=cfb5c07f-55da-4dda-8aa0-5c73cf6588e5" allowfullscreen="allowfullscreen" allow="geolocation *; microphone *; camera *; midi *; encrypted-media *; autoplay *; clipboard-write *; display-capture *"></iframe>
                 </td>
             </tr>
             
